--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ presskit_download_link                    : assets/sonora_113_english           
 app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Fallout Sonora                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Fallout Sonora, in English, for Fallout 2 CE. The all-time classic mod for the all-time classic game.
+app_description                           : Fallout Sonora by NevadaBand, in English, for Fallout 2 CE. The all-time classic mod for the all-time classic game.
 
 enable_smart_app_banner                   : false                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
