--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ ios_app_country                           :                                     
 
 appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
-presskit_download_link                    : assets/sonora_113_english                                         # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
+presskit_download_link                    : readme.md                                        # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
@@ -21,8 +21,8 @@ enable_smart_app_banner                   : false                               
 
 # Information About Yourself
 your_name                                 : Cambragol                             
-your_link                                 : https://emilbaehr.com                     
-your_city                                 : Somewhere                                
+your_link                                 : https://cambragol.github.com                     
+your_city                                 : Central Asia                                
 email_address                             : 
 facebook_username                         :                                           
 instagram_username                        : 
