--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #page title
-page_title                                : Fallout Sonora                                      # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title                                : Fallout: Sonora                                      # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
 ios_app_id                                :                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
@@ -11,9 +11,9 @@ presskit_download_link                    : download                            
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  : Fallout Sonora                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name                                  : Fallout: Sonora                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Fallout Sonora by Nevada Band, in English, for Fallout 2 CE. The all-time classic mod for the all-time classic game.
+app_description                           : Fallout: Sonora by Nevada Band, in English, for Fallout 2 CE. The all-time classic mod for the all-time classic game.
 
 enable_smart_app_banner                   : false                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -53,7 +53,7 @@ features                                  :
     fontawesome_icon_name                 : sync
 
   - title                                 : Pure Vanilla
-    description                           : No extras, addons or tweaks. Just the original and latest Fallout Sonora (1.14), in English.
+    description                           : No extras, addons or tweaks. Just the original and latest Fallout: Sonora (1.14), in English.
     fontawesome_icon_name                 : adjust
   
   - title                                 : Fallout Lingo
