--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ features                                  :
 
   - title                                 : Pure Vanilla
     description                           : No frills, no mods, no extras. Just the raw, unaltered Fallout Sonora (version 1.14) translated into English for a pure, nostalgic experience.
-    fontawesome_icon_name                 : ice-cream
+    fontawesome_icon_name                 : fa-ice-cream
   
   - title                                 : Fallout Lingo
     description                           : Great care has been taken to ensure NPC dialogue and game language stay true to the gritty, dark humor and style of the original Fallout classic.
