--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ enable_smart_app_banner                   : false                               
 # Information About Yourself
 your_name                                 : Cambragol                             
 your_link                                 : https://fallout--nevada-ucoz-ru.translate.goog/index/fallout_sonora/0-59?_x_tr_sl=ru&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp)                  
-your_city                                 : Central Asia                                
+your_city                                 : an Undisclosed Bunker                                
 email_address                             : 
 facebook_username                         :                                           
 instagram_username                        : 
