--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ enable_smart_app_banner                   : false                               
 
 # Information About Yourself
 your_name                                 : Cambragol                             
-your_link                                 : https://fallout--nevada-ucoz-ru.translate.goog/index/fallout_sonora/0-59?_x_tr_sl=ru&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp)                  
+your_link                                 : https://www.moddb.com/members/cambragol/mods                  
 your_city                                 : an Undisclosed Bunker                                
 email_address                             : 
 facebook_username                         :                                           
